# order_service

./: .env  Dockerfile  README.md  docker-compose.yaml  empty.env  gunicorn_config.py  pyproject.toml  requirements.txt  setup.cfg  start.sh
order_service/: __init__.py  celery.py  sentry.py  urls.py
order_service/settings/: __init__.py  common.py
orders/: admin.py  models.py  repositories.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py
requirements/: base.in  base.txt  develop.in  develop.txt
utils/: external_exchange_utils.py
